<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastroProdutoActivity" android:orientation="vertical">

    <TextView
            android:text="@string/nome_do_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView_nnome"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_nome" android:autofillHints="" android:hint="@string/digite_o_nome"/>
    <TextView
            android:text="@string/valor_do_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView_valor"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText_valor" android:hint="@string/digite_o_valor" android:autofillHints=""/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="@string/voltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_voltar" android:layout_weight="1"
                tools:ignore="ButtonStyle" android:onClick="onClickVoltar"/>
        <Button
                android:text="@string/salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_salvar" android:layout_weight="1"
                tools:ignore="ButtonStyle" android:onClick="onClickSalvar"/>
        <Button
                android:text="@string/excluir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_excluir" android:layout_weight="1"
                android:onClick="onClickExcluir"/>
    </LinearLayout>
</LinearLayout>